fix dark mode bg modal

--- a/src/sass/layout/_popup.scss
+++ b/src/sass/layout/_popup.scss
@@ -22,7 +22,7 @@ body.show-popup .modal-container {
 
   padding: 40px 24px;
 
-  background: var(--secondary-bg-cl);
+  background-color: var(--modal-bg-cl);
   border: 2px solid var(--secondary-text-cl);
   border-radius: 18px;
   transform: scale(0.5);
